--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="index.js" type="text/javascript"></script>
+    <script src="./index.js" type="text/javascript"></script>
   </head>
 
   <body>
